[package]
name = "ethers-forked-evm-provider"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.50", default-features = false }
ethers = { git = "https://github.com/guanqun/ethers-rs", features = ["ws"] }
serde = { version = "1.0.124", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }